# chess

./: Cargo.toml
.cargo/: config.toml
client_cli/: Cargo.toml
client_cli/src/: main.rs
core/: Cargo.toml
core/src/: board.rs  game.rs  layout.rs  lib.rs  ruleset.rs
server/: Cargo.toml
server/lib/: client.rs  cmd.rs  lib.rs  requests.rs  responses.rs
server/src/: client.rs  main.rs  msg.rs  session.rs
